[package]
name = "distributed_key_value_store"
version = "0.1.0"
authors = ["pen0x1 <pennywaterfall07@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
log = "0.4"
env_logger = "0.8"
